@@ -1,3 +1,5 @@
+2006/1/23 -- released version 20060123_trunk
+
 2006/1/22 -- released version 20060122_trunk
 
 2006/1/21 -- released version 20060121_trunk
